--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -56,6 +56,7 @@
     }
   },
   "scripts": {
+    "start": "nodemon index.cjs",
     "clean": "aegir clean",
     "lint": "aegir lint",
     "dep-check": "aegir dep-check -i sinon",
@@ -68,16 +69,54 @@
     "@helia/interface": "^4.3.1",
     "@libp2p/interface": "^1.6.3",
     "@libp2p/peer-id": "^4.2.3",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.49.1",
+    "@opentelemetry/exporter-metrics-otlp-proto": "^0.52.1",
+    "@opentelemetry/exporter-prometheus": "^0.52.1",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.52.1",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.52.1",
+    "@opentelemetry/exporter-zipkin": "^1.25.1",
+    "@opentelemetry/instrumentation": "^0.52.1",
+    "@opentelemetry/instrumentation-express": "^0.41.1",
+    "@opentelemetry/instrumentation-http": "^0.52.1",
+    "@opentelemetry/instrumentation-mongodb": "^0.46.0",
+    "@opentelemetry/resources": "^1.25.1",
+    "@opentelemetry/sdk-metrics": "^1.25.1",
+    "@opentelemetry/sdk-node": "^0.52.1",
+    "@opentelemetry/sdk-trace-base": "^1.25.1",
+    "@opentelemetry/sdk-trace-node": "^1.25.1",
+    "@opentelemetry/semantic-conventions": "^1.25.1",
+    "ansis": "^3.3.2",
+    "axios": "^1.7.3",
+    "chalk": "^5.3.0",
+    "commander": "^12.1.0",
+    "compression": "^1.7.4",
+    "config": "^3.3.12",
+    "cors": "^2.8.5",
+    "directory-tree": "^3.5.2",
+    "express": "^4.19.2",
+    "express-enqueue": "^1.0.0",
+    "express-http-proxy": "^2.1.1",
     "fastify": "^4.28.1",
+    "inquirer": "^10.1.8",
     "ipns": "^9.1.0",
+    "jira-client": "^8.2.2",
     "multiformats": "^13.2.2",
-    "raw-body": "^3.0.0"
+    "nodemailer": "^6.9.14",
+    "openapi-generator": "^0.1.39",
+    "ora": "^8.0.1",
+    "raw-body": "^3.0.0",
+    "readline": "^1.3.0",
+    "superagent": "^10.0.0",
+    "swagger-ui": "^5.17.14",
+    "swagger-ui-dist": "^5.17.14"
   },
   "devDependencies": {
     "@libp2p/peer-id-factory": "^4.2.3",
     "@multiformats/multiaddr": "^12.3.0",
     "@types/sinon": "^17.0.3",
     "aegir": "^44.1.1",
+    "nodemon": "^3.1.4",
     "sinon": "^18.0.0",
     "sinon-ts": "^2.0.0"
   }
