--- a/packages/server/express/package.json
+++ b/packages/server/express/package.json
@@ -56,7 +56,7 @@
     }
   },
   "scripts": {
-    "start": "nodemon ./index.mjs",
+    "start": "nodemon index.cjs",
     "clean": "aegir clean",
     "lint": "aegir lint",
     "dep-check": "aegir dep-check -i sinon",
@@ -65,10 +65,26 @@
     "test:node": "aegir test -t node --cov"
   },
   "dependencies": {
+    "@chainsafe/libp2p-noise": "^15.1.1",
+    "@chainsafe/libp2p-yamux": "^6.0.2",
     "@fastify/cors": "^9.0.1",
+    "@helia/block-brokers": "^3.0.3",
+    "@helia/delegated-routing-v1-http-api-client": "^3.0.1",
+    "@helia/http": "^1.0.10",
     "@helia/interface": "^4.3.1",
+    "@helia/routers": "^1.1.1",
+    "@libp2p/bootstrap": "^10.1.4",
+    "@libp2p/circuit-relay-v2": "^1.1.4",
+    "@libp2p/identify": "^2.1.4",
     "@libp2p/interface": "^1.6.3",
+    "@libp2p/kad-dht": "^12.1.4",
+    "@libp2p/mplex": "^10.1.4",
     "@libp2p/peer-id": "^4.2.3",
+    "@libp2p/prometheus-metrics": "^3.1.4",
+    "@libp2p/tcp": "^9.1.4",
+    "@libp2p/tls": "^1.1.4",
+    "@libp2p/webrtc": "^4.1.4",
+    "@libp2p/websockets": "^8.1.4",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.49.1",
     "@opentelemetry/exporter-metrics-otlp-proto": "^0.52.1",
@@ -88,23 +104,28 @@
     "@opentelemetry/semantic-conventions": "^1.25.1",
     "ansis": "^3.3.2",
     "axios": "^1.7.3",
+    "blockstore-fs": "^2.0.0",
     "chalk": "^5.3.0",
     "commander": "^12.1.0",
     "compression": "^1.7.4",
     "config": "^3.3.12",
     "cors": "^2.8.5",
+    "datastore-level": "^11.0.0",
     "directory-tree": "^3.5.2",
     "express": "^4.19.2",
     "express-enqueue": "^1.0.0",
     "express-http-proxy": "^2.1.1",
     "fastify": "^4.28.1",
+    "helia": "^4.2.5",
     "inquirer": "^10.1.8",
     "ipns": "^9.1.0",
     "jira-client": "^8.2.2",
+    "libp2p": "^1.8.3",
     "multiformats": "^13.2.2",
     "nodemailer": "^6.9.14",
     "openapi-generator": "^0.1.39",
     "ora": "^8.0.1",
+    "private-ip": "^3.0.2",
     "raw-body": "^3.0.0",
     "readline": "^1.3.0",
     "superagent": "^10.0.0",
